[project]
name = "carnet-back"
version = "0.1.0"
description = "carnet"
authors = [
    {name = "Guamss",email = "guams@duck.com"},
    {name = "Orabis", email = "email.orabis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "fastapi-cli (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"